--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,16 @@ requires-python = ">=3.12.10"
 authors = [{ name = "Juan Villasante", email = "juanvillasanteg@gmail.com" }]
 
 dependencies = [
+    "duckduckgo-search>=8.0.1",
     "langchain>=0.3.24",
+    "langchain-anthropic>=0.3.12",
+    "langchain-community>=0.3.23",
+    "langchain-openai>=0.3.16",
+    "llama-index>=0.12.35",
     "pandas>=2.2.3",
     "polars>=1.29.0",
+    "pydantic>=2.11.4",
+    "python-dotenv>=1.1.0",
     "streamlit>=1.45.0",
 ]
 
