--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,11 @@ dependencies = [
     "langchain-community>=0.3.23",
     "langchain-openai>=0.3.16",
     "llama-index>=0.12.35",
+    "llama-index-vector-stores-qdrant>=0.6.0",
     "polars>=1.29.0",
     "pydantic>=2.11.4",
     "python-dotenv>=1.1.0",
+    "qdrant-client>=1.14.2",
     "streamlit>=1.45.0",
 ]
 
